--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -149,71 +149,32 @@ var i = 0
 
 $(function() {
     
-    $("#form").steps({
-        bodyTag: "fieldset",
-        onStepChanging: function (event, currentIndex, newIndex) {
-            // Always allow going backward even if the current step contains invalid fields!
-            if (currentIndex > newIndex) {
-                return true;
-            }
-
-            // Forbid suppressing "Warning" step if the user is to young
-            if (newIndex === 3 && Number($("#age").val()) < 18) {
-                return false;
-            }
-
-            var form = $(this);
-
-            // Clean up if user went backward before
-            if (currentIndex < newIndex) {
-                // To remove error styles
-                $(".body:eq(" + newIndex + ") label.error", form).remove();
-                $(".body:eq(" + newIndex + ") .error", form).removeClass("error");
-            }
-
-            // Disable validation on fields that are disabled or hidden.
-            form.validate().settings.ignore = ":disabled,:hidden";
-
-            // Start validation; Prevent going forward if false
-            return form.valid();
-        },
-        onStepChanged: function (event, currentIndex, priorIndex) {
-            // Suppress (skip) "Warning" step if the user is old enough.
-            if (currentIndex === 2 && Number($("#age").val()) >= 18) {
-                $(this).steps("next");
-            }
-
-            // Suppress (skip) "Warning" step if the user is old enough and wants to the previous step.
-            if (currentIndex === 2 && priorIndex === 3) {
-                $(this).steps("previous");
-            }
-        },
-        onFinishing: function (event, currentIndex) {
-            var form = $(this);
-
-            // Disable validation on fields that are disabled.
-            // At this point it's recommended to do an overall check (mean ignoring only disabled fields)
-            form.validate().settings.ignore = ":disabled";
-
-            // Start validation; Prevent form submission if false
-            return form.valid();
-        },
-        onFinished: function (event, currentIndex) {
-            var form = $(this);
-
-            // Submit form input
-            form.submit();
-        }
-    }).validate({
-        errorPlacement: function (error, element) {
-            element.before(error);
-        },
+    $("#new_profile").validate({
         rules: {
-            confirm: {
-                equalTo: "#password"
-            }
+            "profile[profile]": {
+                required: true,
+            },
+
+            "profile[objective]": {
+                required: true,
+            },
+
+            "profile[functions]": {
+                required: true,
+            },
+        },
+        messages: {
+            "profile[profile]": {
+                required: "Este campo es requerido."
+            },
+            "profile[objective]": {
+                required: "Este campo es requerido."
+            },
+            "profile[functions]": {
+                required: "Este campo es requerido."
+            },
         }
-    });
+    })
 
     $('#add-tecnicas-association').on('cocoon:after-insert', (e, insertedItem) => {
         ability_select = insertedItem[0].firstChild.nextSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
@@ -227,6 +188,7 @@ $(function() {
                 }
             }
         })
+        $(ability_select).select2('open')
         button = insertedItem[0].lastChild.previousSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
         $(button).on("click", (e) => {
             e.target.parentElement.parentElement.parentElement.remove()
@@ -256,6 +218,7 @@ $(function() {
                 }
             }
         })
+        $(ability_select).select2('open')
         button = insertedItem[0].lastChild.previousSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
         $(button).on("click", (e) => {
             e.target.parentElement.parentElement.parentElement.remove()
