--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -65,3 +65,48 @@
     </div>
 </div>
 </div>
+
+
+<% content_for :javascript do %>
+<script type="text/javascript">
+    $(function() {
+
+        $("#edit_user_<%= @admin.id %>").validate({
+            rules: {
+                "user[name]": {
+                    required: true,
+                },
+                "user[last_name]": {
+                    required: true,
+                },
+                "user[rut]": {
+                    required: true,
+                },
+                "user[email]": {
+                    required: true,
+                },
+                "user[password_digest]": {
+                    required: true,
+                },
+            },
+            messages: {
+                "user[name]": {
+                    required: "Este campo es requerido."
+                },
+                "user[last_name]": {
+                    required: "Este campo es requerido."
+                },
+                "user[rut]": {
+                    required: "Este campo es requerido."
+                },
+                "user[email]": {
+                    required: "Este campo es requerido."
+                },
+                "user[password_digest]": {
+                    required: "Este campo es requerido."
+                },
+            }
+        })
+    })
+</script>
+<% end %>
