--- a/app/views/collaborators/new.html.erb
+++ b/app/views/collaborators/new.html.erb
@@ -87,6 +87,43 @@ $(function() {
             }
         }
     })
+
+    $("#new_user").validate({
+            rules: {
+                "user[name]": {
+                    required: true,
+                },
+                "user[last_name]": {
+                    required: true,
+                },
+                "user[rut]": {
+                    required: true,
+                },
+                "user[email]": {
+                    required: true,
+                },
+                "user[password_digest]": {
+                    required: true,
+                },
+            },
+            messages: {
+                "user[name]": {
+                    required: "Este campo es requerido."
+                },
+                "user[last_name]": {
+                    required: "Este campo es requerido."
+                },
+                "user[rut]": {
+                    required: "Este campo es requerido."
+                },
+                "user[email]": {
+                    required: "Este campo es requerido."
+                },
+                "user[password_digest]": {
+                    required: "Este campo es requerido."
+                },
+            }
+        })
 })
 
 </script>
