--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -31,7 +31,7 @@
     <div id="wrapper" class="<%= params[:controller] %>.<%= params[:action] %>">
 
         <!-- Navigation -->
-        <%= render 'layouts/navigation', :categories => @categories, :areas => @areas %>
+        <%= render is_admin? ? 'layouts/navigation' : 'layouts/navigation_collaborator', :categories => @categories, :areas => @areas %>
 
         <!-- Page wraper -->
         <div id="page-wrapper" class="gray-bg <%= @extra_class %>">
