--- a/app/views/periods/new.html.erb
+++ b/app/views/periods/new.html.erb
@@ -14,9 +14,9 @@
 
 <div class="wrapper wrapper-content animated fadeInRight">
 <div class="ibox-content m-b-sm border-bottom">
-    <form id="new_priod" action="/periods" accept-charset="UTF-8" method="post">
+    <form id="new_priod" action="/periods" accept-charset="UTF-8" method="post" autocomplete="off">
         <div class="form-group">
-            <label class="font-normal">Inicio y término del periodo</label>
+            <label>Inicio y término del periodo</label>
             <div class="input-daterange input-group" id="datepicker">
                 <input type="text" class="form-control-sm form-control" name="start"/>
                 <span class="input-group-addon input-group-addon">Hasta</span>
@@ -25,7 +25,15 @@
         </div>
         <div class="hr-line-dashed"></div>
 
-        <label class="font-normal">Seleccione a los evaluadores de este periodo</label>
+        <label>Seleccione a los colaboradores de este periodo</label>
+        <select class="form-control collaborators_select" multiple>
+            <% @collaborators.each_with_index do |collaborator, index| %>
+                <option value="<%= collaborator.id %>"><%= collaborator.user.name %> <%= collaborator.user.last_name %> - <%= collaborator.user.rut %></option>
+            <% end %>
+        </select>
+
+        <div class="hr-line-dashed"></div>
+        <label>Seleccione a los evaluadores de este periodo</label>
         <select class="form-control evaulators_select" multiple>
             <% @collaborators.each_with_index do |collaborator, index| %>
                 <option value="<%= collaborator.id %>"><%= collaborator.user.name %> <%= collaborator.user.last_name %> - <%= collaborator.user.rut %></option>
@@ -53,8 +61,8 @@
             autoclose: true
         })
 
-        const evaulators_select = $(".evaulators_select")
-        evaulators_select.bootstrapDualListbox({
+        const collaborators_select = $(".collaborators_select")
+        collaborators_select.bootstrapDualListbox({
             selectorMinimalHeight: 160,
             infoText: 'Mostrando {0}',
             infoTextFiltered: '<span class="label label-warning">Fildrados</span> {0} de {1}',
@@ -63,7 +71,7 @@
             iconRemove: 'fa-arrow-circle-o-left'
         })
 
-        evaulators_select.on("changea", function(e, aux) {
+        collaborators_select.on("changea", function(e, aux) {
             console.log(e)
             console.log(aux)
         })
