--- a/app/views/layouts/_navigation_collaborator.html.erb
+++ b/app/views/layouts/_navigation_collaborator.html.erb
@@ -17,11 +17,12 @@
                 <a href="<%= url_for :controller => 'dashboard', :action => 'index'%>"><i class="fa fa-th-large"></i> <span class="nav-label" data-i18n="nav.dashboard">Dashboards</span></a>
             </li>
             <li class="<%= is_active_controller('admins') %>">
-                <a href="<%= url_for :controller => 'admins', :action => 'index' %>"><i class="fa fa-id-badge"></i> <span class="nav-label" data-i18n="nav.dashboard">Administradores</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse <%= is_active_controller('admins', 'in') %>">
-                    <li class="<%= is_active_action('index') %>"><a href="<%= url_for :controller => 'admins', :action => 'index' %>"><i class="fa fa-list"></i>Administradores</a></li>
+                <a href="<%= url_for :controller => 'evaluations', :action => 'new' %>"><i class="fa fa-id-badge"></i>Autoevaluación</span><span class="fa arrow"></span></a>
+                <a href="<%= url_for :controller => 'evaluations', :action => 'new' %>"><i class="fa fa-id-badge"></i>Evaluar a</span><span class="fa arrow"></span></a>
+                <!-- <ul class="nav nav-second-level collapse <%= is_active_controller('admins', 'in') %>">
+                    <li class="<%= is_active_action('index') %>"><a href="<%= url_for :controller => 'admins', :action => 'index' %>"><i class="fa fa-list"></i>Evaluar a</a></li>
                     <li class="<%= is_active_action('new') %>"><a href="<%= url_for :controller => 'admins', :action => 'new' %>"><i class="fa fa-plus"></i>Crear Administrador</a></li>
-                </ul>
+                </ul> -->
             </li>
         </ul>
 
