--- a/app/views/layouts/_navigation_collaborator.html.erb
+++ b/app/views/layouts/_navigation_collaborator.html.erb
@@ -16,9 +16,13 @@
             <li class="<%= is_active_controller('dashboard') %>">
                 <a href="<%= url_for :controller => 'dashboard', :action => 'index'%>"><i class="fa fa-th-large"></i> <span class="nav-label" data-i18n="nav.dashboard">Dashboards</span></a>
             </li>
-            <li class="<%= is_active_controller('admins') %>">
-                <a href="<%= url_for :controller => 'evaluations', :action => 'new' %>"><i class="fa fa-id-badge"></i>Autoevaluación</span><span class="fa arrow"></span></a>
-                <a href="<%= url_for :controller => 'evaluations', :action => 'new' %>"><i class="fa fa-id-badge"></i>Evaluar a</span><span class="fa arrow"></span></a>
+            <li class="<%= is_active_controller('evaluations') %>">
+                <% if(to_autoevaluate?) %>
+                    <a href="<%= "/evaluations/#{session[:user_id]}" + (autoevalation_done? ? "/edit" : "") %>"><i class="fa fa-id-badge"></i>Autoevaluación</span></a>
+                <% else %>
+                    <a><i class="fa fa-id-badge"></i>Autoevaluación</span></a>
+                <% end %>
+                <!--<a href="<%= to_autoevaluate? ? "/evaluations/#{session[:user_id]}" : "" %>"><i class="fa fa-id-badge"></i>Evaluar a</span><span class="fa arrow"></span></a> -->
                 <!-- <ul class="nav nav-second-level collapse <%= is_active_controller('admins', 'in') %>">
                     <li class="<%= is_active_action('index') %>"><a href="<%= url_for :controller => 'admins', :action => 'index' %>"><i class="fa fa-list"></i>Evaluar a</a></li>
                     <li class="<%= is_active_action('new') %>"><a href="<%= url_for :controller => 'admins', :action => 'new' %>"><i class="fa fa-plus"></i>Crear Administrador</a></li>
