--- a/app/views/periods/index.html.erb
+++ b/app/views/periods/index.html.erb
@@ -10,5 +10,13 @@
 </div>
 
 <div class="wrapper wrapper-content animated fadeInRight">
-
+<div class="container-fluid">
+    <% @periods.each do |period| %>
+        <div class="row">
+            <div class="col">
+                <%= period.start_date %> hasta <%= period.finish_date %>
+            </div>
+        </div>
+    <% end %>
+</div>
 </div>
