--- a/app/views/autoevaluations/new.html.erb
+++ b/app/views/autoevaluations/new.html.erb
@@ -1,12 +1,12 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Evaluaciones</h2>
+        <h2>Autoevaluación</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="<%= url_for :controller => 'evaluations', :action => 'index' %>">Evaluaciónes</a>
+                <a href="<%= url_for :controller => 'autoevaluations', :action => 'index' %>">Autoevaluación</a>
             </li>
             <li class="breadcrumb-item">
-                <strong>Llenar Evaluación</strong>
+                <strong>Llenar Autoevaluación</strong>
             </li>
         </ol>
     </div>
@@ -14,8 +14,8 @@
 
 <div class="wrapper wrapper-content animated fadeInRight">
 <div class="ibox-content m-b-sm border-bottom">
-    <%= form_tag "/evaluations", :method => "post"%>
-    <input hidden name="evaluation" value="<%= @evaluation.id %>">
+    <%= form_tag "/autoevaluations", :method => "post"%>
+    <input hidden name="collaborator" value="<%= @collaborator.id %>">
     <div class="container-fluid e-b">
         <div class="row">
             <div class="col-4 p-md e-b-l e-b-t">
@@ -30,8 +30,8 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <h3>Nombre: <%= @evaluation.collaborator.user.name %> <%= @evaluation.collaborator.user.last_name %></h3> <br>
-                        <h3>Perfil: <%= @evaluation.collaborator.profile.profile %></h3> <br>
+                        <h3>Nombre: <%= @collaborator.user.name %> <%= @collaborator.user.last_name %></h3> <br>
+                        <h3>Perfil: <%= @collaborator.profile.profile %></h3> <br>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
 
-                <% @evaluation.collaborator.profile.abilities.each_with_index do |ability, index|%>
+                <% @collaborator.profile.abilities.each_with_index do |ability, index|%>
                     <% if ability.abilities_type_id != 1 %>
                         <div class="row e-b-b">
                             <div class="col-4 text-left p-sm e-b-r e-b-l">
@@ -79,11 +79,23 @@
 
                             <div class="col-8">
                                 <div class="row">
-                                    <% (1..5).each do |index| %>
-                                        <div class="col p-sm e-b-r text-center">
-                                            <input type="radio" value="<%=index%>" name="abilities[<%=ability.id%>][value]"/>
-                                        </div>
-                                    <% end %>
+                                    <div class="col p-sm e-b-r text-center">
+                                        <input type="radio" value="1" name="abilities[<%=ability.id%>][value]"/>
+                                    </div>
+                                    <div class="col p-sm e-b-r text-center">
+                                        <input type="radio" value="2" name="abilities[<%=ability.id%>][value]"/>
+                                    </div>
+                                    <div class="col p-sm e-b-r text-center">
+                                        <input type="radio" value="3" name="abilities[<%=ability.id%>][value]"/>
+                                    </div>
+                                    <div class="col p-sm e-b-r text-center">
+                                        <input type="radio" value="4" name="abilities[<%=ability.id%>][value]"/>
+                                    </div>
+                                    <div class="col p-sm <%= 
+                                        @blandas_count > @tecnicas_count && index >= @tecnicas_count ? "e-b-r" : ""
+                                    %> text-center">
+                                        <input type="radio" value="5" name="abilities[<%=ability.id%>][value]"/>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -100,7 +112,7 @@
                     </div>
                 </div>
                 
-                <% @evaluation.collaborator.profile.abilities.each_with_index do |ability, index|%>
+                <% @collaborator.profile.abilities.each_with_index do |ability, index|%>
                     <% if ability.abilities_type_id != 2 %>
                         <div class="row e-b-b e-b-l">
                             <div class="col-8 text-center e-b-r" style="padding: 12px;">
