--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -1,241 +1,77 @@
-<% if(!to_autoevaluate?) %>
-
-<div class="wrapper wrapper-content animated fadeInRight">
-<div class="ibox-content m-b-sm border-bottom">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col text-center">
-                <h1>No hay autoevaluaciones pendientes</h1>
-            </div>
-        </div>
+<div class="row wrapper border-bottom white-bg page-heading">
+    <div class="col-lg-10">
+        <h2>Evaluaciones</h2>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="<%= url_for :controller => 'evaluations', :action => 'index' %>">Evaluaciones</a>
+            </li>
+        </ol>
     </div>
 </div>
-</div>
-<% elsif(autoevalation_done?)%>
 
 <div class="wrapper wrapper-content animated fadeInRight">
 <div class="ibox-content m-b-sm border-bottom">
-    <div class="container-fluid e-b">
-        <div class="row">
-            <div class="col-4 p-md e-b-l e-b-t">
-                <img height="120px" src="<%= image_path('logo.png') %>">
-            </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox">
+                <div class="ibox-content">
 
-            <div class="col-8 e-b-t e-b-r">
-                <div class="row">
-                    <div class="col text-center">
-                        <h2><strong>Evaluación de desempeño</strong></h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h3>Nombre: <%= @collaborator.user.name %> <%= @collaborator.user.last_name %></h3> <br>
-                        <h3>Perfil: <%= @collaborator.profile.profile %></h3> <br>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="row">
-            <div class="col-8 text-center e-b-v e-b-l">
-                <h3>COMPETENCIAS PROFESIONALES</h3>
-            </div>
-
-            <div class="col-4 text-center e-b-v e-b-h">
-                <h3>CONOCIMIENTOS TÉCNICOS</h3>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-8">
-                <div class="row">
-                    <div class="col-4 text-center p-md e-b-b e-b-h">
-                        Competencia
-                    </div>
-
-                    <div class="col-8">
-                        <div class="row">
-                            <div class="col text-center p-h-xs e-b-b">
-                                Evaluación 2019
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col p-xxs e-b-r e-b-b text-center">Nunca</div>
-                            <div class="col p-xxs e-b-r e-b-b text-center">Rara vez</div>
-                            <div class="col p-xxs e-b-r e-b-b text-center">A veces</div>
-                            <div class="col p-xxs e-b-r e-b-b text-center">Casi siempre</div>
-                            <div class="col p-xxs e-b-b text-center">Siempre</div>
-                        </div>
-                    </div>
-                </div>
-
-                <% @evaluation.evaluation_abilities.each_with_index do |evaluation_ability, index|%>
-                    <% if evaluation_ability.ability.abilities_type_id != 1 %>
-                        <input hidden value="<%=evaluation_ability.id%>" name="abilities[<%=evaluation_ability.ability.id%>][id]"/>
-                        <div class="row e-b-b">
-                            <div class="col-4 text-left p-sm e-b-r e-b-l">
-                                <strong><%= evaluation_ability.ability.ability %></strong>
-                            </div>
-
-                            <div class="col-8">
-                                <div class="row">
-                                    <% (1..5).each do |index| %>
-                                        <div class="col p-sm e-b-r text-center">
-                                            <% if(evaluation_ability.value == index) %>
-                                                <input type="radio" value="<%=index%>" name="abilities[<%=evaluation_ability.ability.id%>][value]" checked/>
-                                            <% else %>
-                                                <input type="radio" value="<%=index%>" name="abilities[<%=evaluation_ability.ability.id%>][value]" disabled/>
-                                            <% end %>
-                                        </div>
+                    <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
+                        <thead>
+                        <tr>
+                            <th data-toggle="true">Nombre</th>
+                            <th data-hide="phone">Rut</th>
+                            <th data-hide="phone">Evaluación</th>
+                            <th class="text-right" data-sort-ignore="true">Acciones</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <% @evaluations.each do |evaluation| %>
+                        <tr>
+                            <td>
+                                <%= evaluation.collaborator.user.name %> <%= evaluation.collaborator.user.last_name %>
+                            </td>
+                            <td>
+                                <%= evaluation.collaborator.user.rut %>
+                            </td>
+                            <td>
+                                <% if has_been_evaluated(evaluation.id) %>
+                                    <span class="label label-primary">Lista</span>
+                                <% else %>
+                                    <span class="label label-danger">Pendiente</span>
+                                <% end %>
+                            </td>
+                            <td class="text-right">
+                                <div class="btn-group">
+                                    <%= link_to "/evaluations/#{evaluation.id}", :controller => "evaluations", :action => "new", :method => "get" do %>
+                                        <button class="btn-white btn btn-xs" style="border-radius: 0px;">Ver</button>
+                                    <% end %>
+                                    <% if has_been_evaluated(evaluation.id)%>
+                                        <%= link_to "/evaluations/#{evaluation.id}/edit", :controller => "evaluations", :action => "edit", :method => "get" do %>
+                                            <button class="btn-primary btn btn-xs" style="border-radius: 0px;">Editar</button>
+                                        <% end %>
+                                    <% else %>
+                                        <%= link_to "/evaluations/#{evaluation.id}/new", :controller => "evaluations", :action => "new", :method => "get" do %>
+                                            <button class="btn-primary btn btn-xs" style="border-radius: 0px;">Llenar</button>
+                                        <% end %>
                                     <% end %>
                                 </div>
-                            </div>
-                        </div>
-                    <% end %>
-                <% end %>
-            </div>
-            <div class="col-4 text-center evaluation-wrapper">
-                <div class="row e-b-l e-b-b">
-                    <div class="col-8 text-center p-md e-b-r">
-                        Competencia
-                    </div>
-                    <div class="col-4 text-center p-md e-b-r">
-                        Evaluación 2019
-                    </div>
+                            </td>
+                        </tr>
+                        <% end %>
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <td colspan="6">
+                                <ul class="pagination float-right"></ul>
+                            </td>
+                        </tr>
+                        </tfoot>
+                    </table>
+
                 </div>
-                
-                <% @evaluation.evaluation_abilities.each_with_index do |evaluation_ability, index|%>
-                    <% if evaluation_ability.ability.abilities_type_id != 2 %>
-                        <div class="row e-b-b e-b-l">
-                            <div class="col-8 text-center e-b-r" style="padding: 12px;">
-                                <strong><%= evaluation_ability.ability.ability %></strong>
-                            </div>
-                            <input disabled class="col-4" type="number" min="0" max="5" style="padding: 13px" value="<%= evaluation_ability.value %>" name="abilities[<%=evaluation_ability.ability.id%>][value]"/>
-                        </div>
-                    <% end %>
-                <% end %>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid p-md">
-        <div class="row">
-            <div class="offset-11 col-1">
-                <a href="<%= "/evaluations/#{session[:user_id]}/edit" %>"><button class="float-right btn btn-w-m btn-lg btn-primary" type="submit">Editar</button></a>
             </div>
         </div>
     </div>
 </div>
 </div>
-
-<% else %>
-
-<div class="wrapper wrapper-content animated fadeInRight">
-<div class="ibox-content m-b-sm border-bottom">
-    <div class="container-fluid e-b">
-        <div class="row">
-            <div class="col-4 p-md e-b-l e-b-t">
-                <img height="120px" src="<%= image_path('logo.png') %>">
-            </div>
-
-            <div class="col-8 e-b-t e-b-r">
-                <div class="row">
-                    <div class="col text-center">
-                        <h2><strong>Evaluación de desempeño</strong></h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <h3>Nombre: <%= @collaborator.user.name %> <%= @collaborator.user.last_name %></h3> <br>
-                        <h3>Perfil: <%= @collaborator.profile.profile %></h3> <br>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="row">
-            <div class="col-8 text-center e-b-v e-b-l">
-                <h3>COMPETENCIAS PROFESIONALES</h3>
-            </div>
-
-            <div class="col-4 text-center e-b-v e-b-h">
-                <h3>CONOCIMIENTOS TÉCNICOS</h3>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-8">
-                <div class="row">
-                    <div class="col-4 text-center p-md e-b-b e-b-h">
-                        Competencia
-                    </div>
-
-                    <div class="col-8">
-                        <div class="row">
-                            <div class="col text-center p-h-xs e-b-b">
-                                Evaluación 2019
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col p-xxs e-b-r e-b-b text-center">Nunca</div>
-                            <div class="col p-xxs e-b-r e-b-b text-center">Rara vez</div>
-                            <div class="col p-xxs e-b-r e-b-b text-center">A veces</div>
-                            <div class="col p-xxs e-b-r e-b-b text-center">Casi siempre</div>
-                            <div class="col p-xxs e-b-b text-center">Siempre</div>
-                        </div>
-                    </div>
-                </div>
-
-                <% @collaborator.profile.abilities.each_with_index do |ability, index|%>
-                    <% if ability.abilities_type_id != 1 %>
-                        <div class="row e-b-b">
-                            <div class="col-4 text-left p-sm e-b-r e-b-l">
-                                <strong><%= ability.ability %></strong>
-                            </div>
-
-                            <div class="col-8">
-                                <div class="row">
-                                    <% (1..5).each do |index| %>
-                                        <div class="col p-sm e-b-r text-center">
-                                                <input type="radio" value="<%=index%>" name="abilities[<%=ability.id%>][value]" disabled/>
-                                        </div>
-                                    <% end %>
-                                </div>
-                            </div>
-                        </div>
-                    <% end %>
-                <% end %>
-            </div>
-            <div class="col-4 text-center evaluation-wrapper">
-                <div class="row e-b-l e-b-b">
-                    <div class="col-8 text-center p-md e-b-r">
-                        Competencia
-                    </div>
-                    <div class="col-4 text-center p-md e-b-r">
-                        Evaluación 2019
-                    </div>
-                </div>
-                
-                <% @collaborator.profile.abilities.each_with_index do |ability, index|%>
-                    <% if ability.abilities_type_id != 2 %>
-                        <div class="row e-b-b e-b-l">
-                            <div class="col-8 text-center e-b-r" style="padding: 12px;">
-                                <strong><%= ability.ability %></strong>
-                            </div>
-                            <input disabled class="col-4" type="number" min="0" max="5" style="padding: 13px" value="" name="abilities[<%=ability.id%>][value]"/>
-                        </div>
-                    <% end %>
-                <% end %>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid p-md">
-        <div class="row">
-            <div class="offset-11 col-1">
-                <a href="<%= "/evaluations/#{session[:user_id]}" %>"><button class="float-right btn btn-w-m btn-lg btn-primary" type="submit">Llenar</button></a>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-
-<% end %>
