--- a/app/views/autoevaluations/new.html.erb
+++ b/app/views/autoevaluations/new.html.erb
@@ -80,21 +80,21 @@
                             <div class="col-8">
                                 <div class="row">
                                     <div class="col p-sm e-b-r text-center">
-                                        <input type="radio" value="1" name="abilities[<%=ability.id%>][value]"/>
+                                        <input required type="radio" value="1" name="abilities[<%=ability.id%>][value]"/>
                                     </div>
                                     <div class="col p-sm e-b-r text-center">
-                                        <input type="radio" value="2" name="abilities[<%=ability.id%>][value]"/>
+                                        <input required type="radio" value="2" name="abilities[<%=ability.id%>][value]"/>
                                     </div>
                                     <div class="col p-sm e-b-r text-center">
-                                        <input type="radio" value="3" name="abilities[<%=ability.id%>][value]"/>
+                                        <input required type="radio" value="3" name="abilities[<%=ability.id%>][value]"/>
                                     </div>
                                     <div class="col p-sm e-b-r text-center">
-                                        <input type="radio" value="4" name="abilities[<%=ability.id%>][value]"/>
+                                        <input required type="radio" value="4" name="abilities[<%=ability.id%>][value]"/>
                                     </div>
                                     <div class="col p-sm <%= 
                                         @blandas_count > @tecnicas_count && index >= @tecnicas_count ? "e-b-r" : ""
                                     %> text-center">
-                                        <input type="radio" value="5" name="abilities[<%=ability.id%>][value]"/>
+                                        <input required type="radio" value="5" name="abilities[<%=ability.id%>][value]"/>
                                     </div>
                                 </div>
                             </div>
@@ -118,7 +118,7 @@
                             <div class="col-8 text-center e-b-r" style="padding: 12px;">
                                 <strong><%= ability.ability %></strong>
                             </div>
-                            <input class="col-4" type="number" min="0" max="5" style="padding: 13px" name="abilities[<%=ability.id%>][value]"/>
+                            <input class="col-4" type="number" min="1" max="5" style="padding: 13px" name="abilities[<%=ability.id%>][value]"/>
                         </div>
                     <% end %>
                 <% end %>
